Avoid 'undefined' TOC section.

--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -190,6 +190,7 @@ Manuals:
   - sectiontitle: DataGate
     sectionpath: /manuals/datagate/datagate-overview.html
     section:
+    - title: TBD
         
 ##
 Reference:
