--- a/_data/toc.yaml
+++ b/_data/toc.yaml
@@ -15,6 +15,9 @@ horizontalnav:
 - title: Mobile Support
   path: /mobile/mobile-overview.html
   node: Mobile
+- title: Articles
+  path: /articles/articles-overview.html
+  node: Articles
 
 home: {}
 
@@ -2501,3 +2504,15 @@ Mobile:
   - title: Uploader Controls
     path: /reference/monarch-fx/amfUnderstandingUploaders.html
 
+##
+Articles:
+- sectiontitle: ASNA Articles
+  sectionpath: /articles/articles-overview.html
+  section:
+  - title: ASNA Site Articles
+    path: https://www.asna.com/us/articles
+  - sectiontitle: How-to Techniques
+    sectionpath: /articles/how-to-techniques.html
+    section:
+    - title: Logic Program Logger
+      path: /articles/how-to-technique-logger.html
